--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/rajdhani": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "expo": "~44.0.0",
+    "expo-barcode-scanner": "~11.2.0",
+    "expo-font": "~10.0.4",
+    "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-screens": "^3.13.1",
-    "react-native-web": "0.17.1",
-    "expo-barcode-scanner": "~11.2.0",
-    "expo-permissions": "~13.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
