--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "~10.0.4",
     "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
