--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/runtime": "^7.17.9",
     "@expo-google-fonts/rajdhani": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
-    "expo": "~44.0.0",
+    "expo": "^44.0.0",
     "expo-barcode-scanner": "~11.2.0",
     "expo-font": "~10.0.4",
     "expo-permissions": "~13.1.0",
@@ -22,10 +23,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.3.2",
-    "react-native-screens": "^3.13.1",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
