--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
