--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
